@@ -21,6 +21,12 @@ The following files are licensed under the following term:
 
     Copyright (c) 2007-2008  Lucian Langa
 
+    The lib/extras/build_i18n.py file (a modified version of
+    DistUtilsExtra.command.build_i18n):
+
+    Copyright (c) 2020 Yoshizumi Endo.
+    Copyright (c) 2007, 2008 Sebastian Heinlein.
+
     The share/*/apps/gphotoframe.* icon files (a modified version of
     gnome-icon-theme and postr):
 
