@@ -6,3 +6,4 @@ recursive-include share/ *.ui *.in *.png *.svg
 recursive-include po/ *.in *.po
 recursive-include help/ *.in *.py *.po *.png
 recursive-include help/C *.xml
+recursive-include lib/extra *.py
